<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ClassificationFragment">


    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_place"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="105dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_place"
        app:layout_constraintTop_toTopOf="@id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/frame"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeSmall"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="-70dp"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_frame"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/take_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ijo"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="-70dp"
        android:text="@string/take"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/analyze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/analyze"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/take_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/ijo"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/analyze"/>

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Organik"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/ijo"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>